# BlazeEngine

./: .gitignore  CMakeLists.txt  readme.md
src/: main.cpp
src/core/: application.cpp  application.hpp
src/logger/: logger.cpp  logger.hpp
src/renderer/: renderer.cpp  renderer.hpp
